Use the same style as workup forms
There’s a little “faking” here to use some styles for
simple form. These can be ripped out eventually when
we convert.

I also removed the “Notes” from specs mainly because
we use a legend to label this text area. I’m not
100% convinced that we need to have a spec for 
non-required fields.

--- a/app/assets/stylesheets/renalware/forms.css.scss
+++ b/app/assets/stylesheets/renalware/forms.css.scss
@@ -6,16 +6,18 @@
   }
 }
 
+form {
+  .small-input {
+    max-width: 250px !important;
+  }
+}
+
 .document form {
   .form-content {
     max-width: 960px;
   }
 
   .datepicker-wrapper {
-    max-width: 250px !important;
-  }
-
-  .small-input {
     max-width: 250px !important;
   }
 
