--- a/app/views/renalware/clinic_visits/new.html.slim
+++ b/app/views/renalware/clinic_visits/new.html.slim
@@ -4,5 +4,7 @@
 
   .row
     = form_for [@patient, @clinic_visit], url: patient_clinic_visits_path(@patient) do |f|
-      = render partial: 'form', locals: { f: f }
-      = f.submit 'Save', class: 'button'
+      = render partial: "form", locals: { f: f }
+      = f.submit "Save", class: "button"
+      span= " or "
+      = link_to "cancel", patient_clinic_visits_path(@patient)
