--- a/app/views/renalware/shared/_flash_messages.html.slim
+++ b/app/views/renalware/shared/_flash_messages.html.slim
@@ -1,6 +1,18 @@
-- flash.each do |name, msg|
-  - if flash[name]
-    .row class="flash-#{name}"
-      .alert-box.info.round data={alert: nil}
-        = msg
-        a href="#" class='close' &times;
+.flash-message
+  - flash.each do |name, msg|
+    - if flash[name]
+      - if name == "notice"
+        .row class=name
+          .alert-box.success.round data={alert: nil}
+            = msg
+            a href="#" class='close' &times;
+      - elsif name == "error" || "alert"
+        .row class=name
+          .alert-box.alert.round data={alert: nil}
+            = msg
+            a href="#" class='close' &times;
+      - else
+        .row class=name
+          .alert-box.info.round data={alert: nil}
+            = msg
+            a href="#" class='close' &times;
