--- a/app/views/renalware/shared/_flash_messages.html.slim
+++ b/app/views/renalware/shared/_flash_messages.html.slim
@@ -5,14 +5,14 @@
         .row class=name
           .alert-box.success.round data={alert: nil}
             = msg
-            a href="#" class='close' &times;
+            a href="#" class="close" &times;
       - elsif name == "error" || "alert"
         .row class=name
           .alert-box.alert.round data={alert: nil}
             = msg
-            a href="#" class='close' &times;
+            a href="#" class="close" &times;
       - else
         .row class=name
           .alert-box.info.round data={alert: nil}
             = msg
-            a href="#" class='close' &times;
+            a href="#" class="close" &times;
