Handle errors when updating registration status

--- a/app/views/renalware/transplants/dashboards/show.html.slim
+++ b/app/views/renalware/transplants/dashboards/show.html.slim
@@ -6,4 +6,5 @@
     h2 Transplant Status
 
     = render "transplant_status"
-    = render "transplant_status_history" if @registration.persisted?
+    - if @registration.persisted?
+      = render "renalware/transplants/registration_statuses/status_history"
