--- a/app/views/renalware/transplants/registration_statuses/_status_history.html.slim
+++ b/app/views/renalware/transplants/registration_statuses/_status_history.html.slim
@@ -1,23 +1,13 @@
 ruby:
   patient = @registration.patient
-  post_path = patient_transplants_registration_statuses_path(patient)
-  new_status = @registration.statuses.build(
-    description: @registration.current_status.description,
-    started_on: Time.zone.today
-  )
 
-fieldset
+fieldset.status-history
   legend Status History
 
   .row
     .large-centered.large-8.columns
-      = simple_form_for new_status, url: post_path, wrapper: "inline_form" do |f|
-          = f.input :description_id,
-            collection: Renalware::Transplants::RegistrationStatusDescription.ordered,
-            label_method: :name, value_method: :id, include_blank: false,
-            label: false
-          = f.input :started_on, as: :date_picker, label: false
-          = f.submit "Add status", class: 'button tiny'
+      = render 'renalware/transplants/registration_statuses/inline_form'
+
   .row
     .large-12.columns
       table
