--- a/app/views/renalware/navigation/_help_items.html.slim
+++ b/app/views/renalware/navigation/_help_items.html.slim
@@ -2,4 +2,4 @@ li.has-dropdown
   = link_to "Help", "#"
   ul.dropdown
     li
-      = link_to "Renal Reg HD/PD Reasons for Change", modality_reasons_path
+      = link_to "Renal Reg HD/PD Reasons for Change", modalities_reasons_path
