--- a/app/views/renalware/modalities/codes/new.html.slim
+++ b/app/views/renalware/modalities/codes/new.html.slim
@@ -6,8 +6,8 @@
 .row
   .large-6.columns
       = form_for @modal_code, method: :post do |m|
-        = render partial: "renalware/modality_codes/form", locals: { m: m }
+        = render partial: "form", locals: { m: m }
 
         = submit_tag "Save", class: "button"
         span= " or "
-        = link_to "cancel", modality_codes_path
+        = link_to "cancel", modalities_codes_path
