--- a/app/views/renalware/transplants/registration_statuses/_list.html.slim
+++ b/app/views/renalware/transplants/registration_statuses/_list.html.slim
@@ -1,6 +1,3 @@
-ruby:
-  patient = @registration.patient
-
 fieldset.status-history
   legend Status History
 
@@ -22,10 +19,10 @@ fieldset.status-history
             tr
               td
                 = link_to "Edit",
-                  edit_patient_transplants_registration_status_path(patient, status)
+                  edit_patient_transplants_registration_status_path(@patient, status)
                 = pipe_separator
                 = link_to 'Delete',
-                  patient_transplants_registration_status_path(patient, status),
+                  patient_transplants_registration_status_path(@patient, status),
                   id: "#{status.id}-status",
                   method: :delete,
                   data: { confirm: "Are you sure you want to delete this status?"}
