--- a/app/views/renalware/bag_types/index.html.slim
+++ b/app/views/renalware/bag_types/index.html.slim
@@ -25,7 +25,7 @@
             td
               = link_to "Edit", edit_bag_type_path(bt.id), id: "edit-bag-type-#{bt.id}"
               = pipe_separator
-              = link_to "Delete", bag_type_path(bt.id), method: :delete , id: "delete-bag-type-#{bt.id}", data: { confirm: "Are you sure you want to delete this bag type?" }
+              = link_to "Delete", bag_type_path(bt.id), method: :delete , id: "delete-bag-type-#{bt.id}", data: { confirm: I18n.t("prompts.confirm_delete") }
               td= bt.manufacturer
               td= bt.description
               td= bt.glucose_grams_per_litre
