--- a/app/views/renalware/events/types/index.html.slim
+++ b/app/views/renalware/events/types/index.html.slim
@@ -12,5 +12,6 @@
           td
             = link_to "Edit", edit_event_type_path(t.id)
             = pipe_separator
-            = link_to "Delete", event_type_path(t.id), id: "#{t.id}-pet", method: :delete, data: {confirm: "Are you sure you want to delete this option?" }
+            = link_to "Delete", event_type_path(t.id), id: "#{t.id}-pet", method: :delete,
+              data: {confirm: I18n.t("prompts.confirm_delete") }
           td= t.name
