--- a/app/views/renalware/modality_codes/index.html.slim
+++ b/app/views/renalware/modality_codes/index.html.slim
@@ -15,7 +15,8 @@
           td
             = link_to "Edit", edit_modality_code_path(m.id)
             = pipe_separator
-            = link_to "Delete", modality_code_path(m.id), method: :delete, data: { confirm: "Are you sure you want to delete this modal?" }
+            = link_to "Delete", modality_code_path(m.id), method: :delete,
+              data: { confirm: I18n.t("prompts.confirm_delete") }
           td= m.name
           td= m.code
           td= m.site
