Added footer of renalware branding/version, with styling. Removed 'RW2.0' from logged in title navbar.

--- a/app/assets/stylesheets/renalware/globals.css.scss
+++ b/app/assets/stylesheets/renalware/globals.css.scss
@@ -194,3 +194,14 @@ span.monospaced {
   font-family: monospace;
   font-size: 1.2em;
 }
+
+footer {
+  text-align: right;
+  position: absolute;
+  right: 0px;
+  bottom: 0px;
+  width: 100%;
+  color: #C0C0C0;
+  font-size: 12px;
+  margin: 1em;
+}
