--- a/app/views/renalware/transplants/registration_statuses/create.js.erb
+++ b/app/views/renalware/transplants/registration_statuses/create.js.erb
@@ -1,2 +1,2 @@
-$("fieldset.status-history").replaceWith('<%= j render "status_history" %>');
+$("fieldset.status-history").replaceWith('<%= j render "list" %>');
 initDatepickersIn("fieldset.status-history");
