Add Blamable to ClinicVisits to track who recorded the visit

--- a/app/views/renalware/clinic_visits/_clinic_visit.html.slim
+++ b/app/views/renalware/clinic_visits/_clinic_visit.html.slim
@@ -9,3 +9,4 @@ tr
   td.clinic-type= clinic_visit.clinic_type
   td.bmi= clinic_visit.bmi
   td.bp= clinic_visit.bp
+  td.created-by= clinic_visit.created_by.to_s(:last_first)
