--- a/app/views/renalware/clinic_visits/index.html.slim
+++ b/app/views/renalware/clinic_visits/index.html.slim
@@ -10,6 +10,7 @@
           th Clinic Type
           th BMI
           th BP
+          th Created by
 
       tbody
         = render @clinic_visits
