--- a/app/views/renalware/navigation/_footer.html.slim
+++ b/app/views/renalware/navigation/_footer.html.slim
@@ -1,3 +1,3 @@
 .row
   footer
-    | Renalware® v2.0.0 © 2015-2016 Airslie Ltd &nbsp;&nbsp;
+    | Renalware® v#{Renalware::VERSION} © 2015-2016 Airslie Ltd &nbsp;&nbsp;
