--- a/app/views/renalware/transplants/registration_statuses/_record_header.html.slim
+++ b/app/views/renalware/transplants/registration_statuses/_record_header.html.slim
@@ -4,4 +4,4 @@
     = render "renalware/patients/mini_renal_profile", model: @patient
 
     h2
-      | Edit Transplant Status History
+      | Transplant Status History
