--- a/app/views/renalware/transplants/registrations/_summary.html.slim
+++ b/app/views/renalware/transplants/registrations/_summary.html.slim
@@ -10,6 +10,9 @@ fieldset
           br
           | since&nbsp;
           = datestamp @registration.current_status.started_on
+          br
+          = link_to "Update Status", new_patient_transplants_registration_status_path(@patient),
+            class: 'button tiny secondary'
 
     .large-3.columns
       dl
