--- a/app/views/renalware/transplants/registration_statuses/_list.html.slim
+++ b/app/views/renalware/transplants/registration_statuses/_list.html.slim
@@ -25,3 +25,8 @@ fieldset.status-history
               td= status.description
               td= status.updated_by.to_s(:full_name)
               td= l status.terminated_on if status.terminated_on
+
+  .row
+    .large-12.columns
+      .right= link_to "Update Status", new_patient_transplants_registration_status_path(@patient),
+        class: 'button tiny secondary'
