--- a/app/views/renalware/transplants/registration_statuses/_list.html.slim
+++ b/app/views/renalware/transplants/registration_statuses/_list.html.slim
@@ -29,4 +29,4 @@ fieldset.status-history
   .row
     .large-12.columns
       .right= link_to "Update Status", new_patient_transplants_registration_status_path(@patient),
-        class: 'button tiny secondary'
+        class: 'button tiny'
