Updated changed path name within event types index.

--- a/app/views/renalware/events/types/index.html.slim
+++ b/app/views/renalware/events/types/index.html.slim
@@ -12,6 +12,6 @@
           td
             = link_to "Edit", edit_events_type_path(t.id)
             = pipe_separator
-            = link_to "Delete", event_type_path(t.id), id: "#{t.id}-pet", method: :delete,
+            = link_to "Delete", events_type_path(t.id), id: "#{t.id}-pet", method: :delete,
               data: {confirm: I18n.t("prompts.confirm_delete") }
           td= t.name
