--- a/app/views/renalware/modalities/modalities/new.html.slim
+++ b/app/views/renalware/modalities/modalities/new.html.slim
@@ -24,8 +24,8 @@
           = m.label :modal_change_type, "Type of Change"
           = m.select :modal_change_type, modal_change_options(m.object.modal_change_type), {}, class: "modal-change-type"
         li.hide-death
-          = m.label :modality_reason_id, "Reason for Change"
-          = m.collection_select :modality_reason_id, modal_reasons_for(m.object.modal_change_type), :id, :description, {}, class: "modality-reason-select"
+          = m.label :reason_id, "Reason for Change"
+          = m.collection_select :reason_id, modal_reasons_for(m.object.modal_change_type), :id, :description, {}, class: "modality-reason-select"
 
         li.hide-death
           = link_to "Renal Registry Reason for Change Codes", "#", id: "modal-reason-code", class: "button tiny mt"
