--- a/app/views/renalware/shared/documents/_blood_group_input.html.slim
+++ b/app/views/renalware/shared/documents/_blood_group_input.html.slim
@@ -1,3 +1,3 @@
 = f.simple_fields_for attribute, f.object.send(attribute) do |fd|
   = fd.input :value, label: f.object.class.human_attribute_name(attribute),
-    input_html: { class: "small-input" }
+    input_html: { class: "small-input" }, collection: Renalware::BloodGroup::OPTIONS
