Format date using the correct localization

--- a/app/views/renalware/events/events/_event.html.slim
+++ b/app/views/renalware/events/events/_event.html.slim
@@ -8,5 +8,4 @@ tr
           = event.description
         .content.toggle-content id="patient-event-notes-#{event.id}"
           = event.notes
-  td= event.date_time
-
+  td=l event.date_time
