--- a/app/views/renalware/events/events/_event.html.slim
+++ b/app/views/renalware/events/events/_event.html.slim
@@ -1,5 +1,5 @@
 tr
-  td= event.created_at.strftime("%d/%m/%Y")
+  td= l event.created_at.to_date
   td= event.event_type
   td
     dl.accordion(data-accordion)
