--- a/app/views/renalware/transplants/dashboards/show.html.slim
+++ b/app/views/renalware/transplants/dashboards/show.html.slim
@@ -8,3 +8,5 @@
     = render "renalware/transplants/registrations/summary"
     - if @registration.persisted?
       = render "renalware/transplants/registration_statuses/list"
+
+    = render "renalware/transplants/recipient_operations/list"
