--- a/app/views/renalware/transplants/recipient_operations/_list.html.slim
+++ b/app/views/renalware/transplants/recipient_operations/_list.html.slim
@@ -26,9 +26,8 @@ fieldset.status-history
           tbody
             - @recipient_operations.each do |operation|
               tr
-                td= link_to "Edit", [:edit, @patient, operation]
-                td
-                  = link_to [:edit, @patient, operation] do
+                td= link_to "Edit", edit_patient_transplants_recipient_operation_path(@patient, operation)
+                td= link_to patient_transplants_recipient_operation_path(@patient, operation) do
                     = l operation.performed_on
                 td= operation.operation_type.text
                 td= operation.document.recipient.operation_number
