--- a/app/views/renalware/transplants/recipient_operations/_record_header.html.slim
+++ b/app/views/renalware/transplants/recipient_operations/_record_header.html.slim
@@ -10,7 +10,7 @@
     - if @recipient_operation.persisted?
       dl.sub-nav
         dd= link_to "Transplant Info", patient_transplants_dashboard_path(@patient)
-        dd= link_to "View", [@patient, @recipient_operation]
-        dd= link_to "Edit", [:edit, @patient, @recipient_operation]
+        dd= link_to "View", patient_transplants_recipient_operation_path(@patient, @recipient_operation)
+        dd= link_to "Edit", edit_patient_transplants_recipient_operation_path(@patient, @recipient_operation)
 
     = render "sections_nav"
