--- a/app/views/renalware/transplants/recipient_workups/show.html.slim
+++ b/app/views/renalware/transplants/recipient_workups/show.html.slim
@@ -2,33 +2,19 @@
 
 - if @workup
   .document-view
-    = render "renalware/shared/documents/attributes_group",
-      group: @workup.document.comorbidities,
-      legend: "Co-morbidities", destination: "comorbidities"
-
-    = render "renalware/shared/documents/attributes_group",
-      group: @workup.document.historicals,
-      legend: "Historicals", destination: "historical"
-
-    = render "renalware/shared/documents/attributes_group",
-      group: @workup.document.scores,
-      legend: "Scores", destination: "scores"
+    - ["Comorbidities", "Historicals", "Scores"].each do |group|
+      = render "renalware/shared/documents/attributes_group",
+        group: @workup.document.send(group.parameterize('_')),
+        legend: group, destination: group.parameterize('_')
 
     = render "renalware/shared/documents/attributes_group",
       group: @workup.document.cervical_smear,
       legend: "Cervical smear data (latest and historical)", destination: "cervical"
 
-    = render "renalware/shared/documents/attributes_group",
-      group: @workup.document.examination,
-      legend: "Examination", destination: "examination"
-
-    = render "renalware/shared/documents/attributes_group",
-      group: @workup.document.education,
-      legend: "Transplant Education", destination: "education"
-
-    = render "renalware/shared/documents/attributes_group",
-      group: [@workup.document.consent, @workup.document.marginal_consent],
-      legend: "Consent", destination: "consent"
+    - ["Examination", "Education", "Consent"].each do |group|
+      = render "renalware/shared/documents/attributes_group",
+        group: @workup.document.send(group.parameterize('_')),
+        legend: group, destination: group.parameterize('_')
 
     .row data-magellan-destination="hla"
       .columns.large-12
