--- a/app/views/renalware/transplants/registrations/show.html.slim
+++ b/app/views/renalware/transplants/registrations/show.html.slim
@@ -2,29 +2,10 @@
 
 - return unless @registration
 .document-view
-  = render "renalware/shared/documents/attributes_group",
-    group: @registration.document.codes,
-    legend: "Codes", destination: "codes"
-
-  = render "renalware/shared/documents/attributes_group",
-    group: @registration.document.crf,
-    legend: "CRF", destination: "crf"
-
-  = render "renalware/shared/documents/attributes_group",
-    group: @registration.document.hla,
-    legend: "HLA", destination: "hla"
-
-  = render "renalware/shared/documents/attributes_group",
-    group: @registration.document.transplant,
-    legend: "Transplant", destination: "transplant"
-
-  = render "renalware/shared/documents/attributes_group",
-    group: @registration.document.organs,
-    legend: "Organs", destination: "organs"
-
-  = render "renalware/shared/documents/attributes_group",
-    group: @registration.document.nhb_consent,
-    legend: "Consent", destination: "consent"
+  - ["Codes", "CRF", "HLA", "Transplant", "Organs", "NHB Consent"].each do |group|
+    = render "renalware/shared/documents/attributes_group",
+      group: @registration.document.send(group.parameterize('_')),
+      legend: group, destination: group.parameterize('_')
 
   = render "renalware/shared/attributes_group",
     legend: "Admin", destination: "admin",
