Use public_send instead of send

--- a/app/views/renalware/shared/_attributes_list.html.slim
+++ b/app/views/renalware/shared/_attributes_list.html.slim
@@ -1,6 +1,6 @@
 dl
   - Array.wrap(attributes).each do |attribute|
-    - value = resource.send(attribute)
+    - value = resource.public_send(attribute)
     dt
       = resource.class.human_attribute_name attribute
     dd
