--- a/app/views/renalware/shared/documents/_dated_confirmation_input.html.slim
+++ b/app/views/renalware/shared/documents/_dated_confirmation_input.html.slim
@@ -1,4 +1,4 @@
-= f.simple_fields_for attribute, f.object.send(attribute) do |fd|
+= f.simple_fields_for attribute, f.object.public_send(attribute) do |fd|
   tr
     td= fd.label :status, f.object.class.human_attribute_name(attribute)
     td= fd.input :status, as: :inline_radio_buttons,
