--- a/app/views/renalware/shared/documents/_infection_status_input.html.slim
+++ b/app/views/renalware/shared/documents/_infection_status_input.html.slim
@@ -1,4 +1,4 @@
-= f.simple_fields_for attribute, f.object.send(attribute) do |fd|
+= f.simple_fields_for attribute, f.object.public_send(attribute) do |fd|
   tr
     td= fd.label :value, f.object.class.human_attribute_name(attribute)
     td= fd.input :value, label: false, wrapper: "vertical_form"
