--- a/app/views/renalware/shared/documents/_left_right_confirmation_input.html.slim
+++ b/app/views/renalware/shared/documents/_left_right_confirmation_input.html.slim
@@ -1,4 +1,4 @@
-= f.simple_fields_for attribute, f.object.send(attribute), wrapper: "vertical_form" do |fc|
+= f.simple_fields_for attribute, f.object.public_send(attribute), wrapper: "vertical_form" do |fc|
   tr
     td= f.object.class.human_attribute_name(attribute)
     td= fc.input :left, as: :inline_radio_buttons, label: false
