--- a/app/views/renalware/transplants/recipient_operations/show.html.slim
+++ b/app/views/renalware/transplants/recipient_operations/show.html.slim
@@ -11,7 +11,7 @@
 
   - ["Kidney", "Recipient", "Donor", "DSA", "BKV"].each do |group|
     = render "renalware/shared/documents/attributes_group",
-      group: @recipient_operation.document.send(group.parameterize('_')),
+      group: @recipient_operation.document.public_send(group.parameterize('_')),
       legend: group, destination: group.parameterize('_')
 
   = render "renalware/shared/attributes_group",
