--- a/app/views/renalware/transplants/registrations/show.html.slim
+++ b/app/views/renalware/transplants/registrations/show.html.slim
@@ -4,7 +4,7 @@
 .document-view
   - ["Codes", "CRF", "HLA", "Transplant", "Organs", "NHB Consent"].each do |group|
     = render "renalware/shared/documents/attributes_group",
-      group: @registration.document.send(group.parameterize('_')),
+      group: @registration.document.public_send(group.parameterize('_')),
       legend: group, destination: group.parameterize('_')
 
   = render "renalware/shared/attributes_group",
