--- a/app/views/renalware/transplants/recipient_operations/show.html.slim
+++ b/app/views/renalware/transplants/recipient_operations/show.html.slim
@@ -9,13 +9,7 @@
       :kidney_perfused_with_blood_at, :operation_type, :transplant_site,
       :cold_ischaemic_time, :notes]
 
-  - ["Kidney", "Recipient", "Donor", "DSA", "BKV"].each do |group|
+  - ["Kidney", "Recipient", "Donor", "DSA", "BKV", "Outcome"].each do |group|
     = render "renalware/shared/documents/attributes_group",
       group: @recipient_operation.document.public_send(group.parameterize('_')),
       legend: group, destination: group.parameterize('_')
-
-  = render "renalware/shared/attributes_group",
-    legend: "Outcome", destination: "outcome",
-    resource: @recipient_operation,
-    attributes: [:transplant_failed, :failed_on, :failure_cause, :failure_description,
-      :stent_removed_on]
