--- a/app/views/renalware/clinic_visits/edit.html.slim
+++ b/app/views/renalware/clinic_visits/edit.html.slim
@@ -2,7 +2,7 @@
   .columns.large-12
     = render "header"
   .row
-    = form_for [@patient, @clinic_visit],
+    = simple_form_for [@patient, @clinic_visit],
       url: patient_clinic_visit_path(patient_id: @patient.to_param, id: @clinic_visit.to_param) do |f|
 
       = render partial: 'form', locals: { f: f }
