--- a/app/views/renalware/transplants/recipient_operations/_list.html.slim
+++ b/app/views/renalware/transplants/recipient_operations/_list.html.slim
@@ -1,5 +1,5 @@
 fieldset.status-history
-  legend Operations
+  legend Recipient Operations
 
   - if @recipient_operations.empty?
     .call-to-action
