--- a/app/views/renalware/shared/_attributes_list.html.slim
+++ b/app/views/renalware/shared/_attributes_list.html.slim
@@ -6,7 +6,7 @@ dl
     dd
       - if value.respond_to? :nested_attribute?
         = render value
-      - if attribute =~ /_time$/
+      - elsif attribute =~ /_time$/
         = I18n.l value, format: :time
       - elsif value.respond_to? :text
         = value.text
